Add photo and list ingredients

--- a/recipes/tequila-chili.html
+++ b/recipes/tequila-chili.html
@@ -7,5 +7,24 @@
 
     <body>
         <h1>Tequila Chili</h1>
+
+        <p1><img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9346573.jpg&w=595&h=398&c=sc&poi=face&q=60&orient=true" alt="Sumptuous Tequila Chili"></p1>
+        
+        <h2>Description</h2>
+
+        <p1>This simple and quick one-pot chili has great flavor and is nice and meaty.</p1>
+
+        <p1><ul>
+            <li>1 pound ground beef</li>
+            <li>1 (14.5 ounce) can italian-style stewed tomatoes</li>
+            <li>1 (15 ounce) can light red kidney beans, drained</li>
+            <li>1 onion, chopped</li>
+            <li>1 clove garlic, minced</li>
+            <li>1 (8 ounce) can tomato sauce</li>
+            <li>1 tabespoon chili powder</li>
+            <li>1.5 teaspoons ground cumin</li>
+            <li>1 teaspoon salt</li>
+            <li>0.5 teaspoon cayenne pepper</li>
+        </ul></p1>
     </body>
 </html>
