Add ordered list of steps

--- a/recipes/tequila-chili.html
+++ b/recipes/tequila-chili.html
@@ -26,5 +26,14 @@
             <li>1 teaspoon salt</li>
             <li>0.5 teaspoon cayenne pepper</li>
         </ul></p1>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Brown the ground beef in a large pot over medium heat</li>
+            <li>Stir in the tomatoes, kidney beans, onion, garlic</li>
+            <li>Add tomato sauce, cumin powder, cayenne pepper, chilli powder, tequila and salt</li>
+            <li>SImmer for 20 minutes</li>
+        </ol>
+
     </body>
 </html>
