--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <body>
         <h1>Odin Recipes</h1> 
 
-        <a href="./recipes/tequila-chili.html">Recipe Title</a>
+        <ul><li><a href="./recipes/tequila-chili.html">Tequila Chili</a></li>
+            <li><a href="./recipes/basic-crepes.html">Basic Crepes</a></li>
+            <li><a href="./recipes/scrambled-egg-muffin.html">Scrambled Egg Muffin</a></li>
+        </ul>
     </body>
 </html>
