Remove unnecessary paragraph

--- a/recipes/tequila-chili.html
+++ b/recipes/tequila-chili.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Tequila Chili</h1>
 
-        <p1><img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9346573.jpg&w=595&h=398&c=sc&poi=face&q=60&orient=true" alt="Sumptuous Tequila Chili"></p1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9346573.jpg&w=595&h=398&c=sc&poi=face&q=60&orient=true" alt="Sumptuous Tequila Chili">
         
         <h2>Description</h2>
 
