--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1> 
+        <h1>Odin Recipes</h1>
+        
+        <p1>Welcome to Odin Recipes. Take a look at the three recipes below</p1>
 
         <ul><li><a href="./recipes/tequila-chili.html">Tequila Chili</a></li>
             <li><a href="./recipes/basic-crepes.html">Basic Crepes</a></li>
