--- a/recipes/tequila-chili.html
+++ b/recipes/tequila-chili.html
@@ -14,6 +14,8 @@
 
         <p1>This simple and quick one-pot chili has great flavor and is nice and meaty.</p1>
 
+        <h2>Ingredients</h2>
+
         <p1><ul>
             <li>1 pound ground beef</li>
             <li>1 (14.5 ounce) can italian-style stewed tomatoes</li>
