Complete steps in all recipe files

--- a/recipes/basic-crepes.html
+++ b/recipes/basic-crepes.html
@@ -28,10 +28,10 @@
         <h2>Steps</h2>
 
         <p1><ol>
-            <li>Whisk fluor and eggs in large bowl</li>
-            <li>Gradually add milk and water, stir to combine. Add salt, butter and beat till smooth</li>
-            <li>Heat lightly oiled pan over medium heat. Scoop batter onto pan using about 1/4 cup for each crepe</li>
-            <li>Cook for about 2 minutes until bottom is light brown</li>
+            <li>Whisk fluor and eggs in large bowl.</li>
+            <li>Gradually add milk and water, stir to combine. Add salt, butter and beat till smooth.</li>
+            <li>Heat lightly oiled pan over medium heat. Scoop batter onto pan using about 1/4 cup for each crepe.</li>
+            <li>Cook for about 2 minutes until bottom is light brown.</li>
         </ol></p1>
     </body>
 </html>
