--- a/recipes/tequila-chili.html
+++ b/recipes/tequila-chili.html
@@ -31,10 +31,10 @@
 
         <h2>Steps</h2>
         <ol>
-            <li>Brown the ground beef in a large pot over medium heat</li>
-            <li>Stir in the tomatoes, kidney beans, onion, garlic</li>
-            <li>Add tomato sauce, cumin powder, cayenne pepper, chilli powder, tequila and salt</li>
-            <li>SImmer for 20 minutes</li>
+            <li>Brown the ground beef in a large pot over medium heat.</li>
+            <li>Stir in the tomatoes, kidney beans, onion, garlic.</li>
+            <li>Add tomato sauce, cumin powder, cayenne pepper, chilli powder, tequila and salt.</li>
+            <li>SImmer for 20 minutes.</li>
         </ol>
 
     </body>
